--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-less": "~0.7.0",
-    "grunt-contrib-jade": "~0.8.0"
+    "grunt-contrib-jade": "~0.8.0",
+    "grunt-contrib-concat": "~0.3.0"
   }
 }
