--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "grunt-contrib-less": "~0.7.0",
     "grunt-contrib-jade": "~0.8.0",
     "grunt-contrib-concat": "~0.3.0"
+  },
+  "dependencies": {
+    "underscore": "~1.5.2",
+    "backbone": "~1.1.0"
   }
 }
