--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-less": "~0.7.0",
     "grunt-contrib-jade": "~0.8.0",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "node-srv": "~0.3.1"
   }
 }
