--- a/package.json
+++ b/package.json
@@ -2,25 +2,27 @@
   "name": "stopslov.net",
   "version": "0.2.0",
   "description": "stopslov.net",
-  "main": "build/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified\" && exit 0",
+    "build": "grunt build",
+    "watch": "grunt watch",
+    "serve": "grunt srv"
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@bitbucket.org/maikudou/stopslov.net.git"
+    "url": "git+https://github.com/maikudou/stopslov.net.git"
   },
   "author": "Mikhail Labanov",
-  "license": "Proprietary",
-  "gitHead": "c6be632409e0612b1ac7fcf1edece2ee5a3fe30d",
+  "license": "MIT",
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "grunt": "^1.0.4",
     "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-less": "~0.7.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-copy": "~0.5.0",
-    "node-srv": "~1.0.1",
-    "jade": "~1.3.0"
+    "grunt-contrib-less": "^2.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "install": "^0.13.0",
+    "node-srv": "^2.2.2",
+    "pug": "^2.0.4"
   }
 }
